# go-groth16

./: .gitattributes  README.md  go.mod  groth16.go  link.go
.github/workflows/: build-binaries.yml  publish-test.yml
Groth16.Net/: Groth16.Net.sln  version.props
Groth16.Net/Groth16.Net/: AssemblyInfo.cs  Groth16.Net.csproj  Groth16Base.cs  Helpers.cs  Interop.cs  LibPathResolver.cs  Linking.cs  LoadLibNative.cs  Prover.cs  Verifier.cs
Groth16.Net/Groth16.Net.Tests/: Groth16.Net.Tests.csproj  Groth16Tests.cs  Helpsers.cs
Groth16.Net/Groth16.Net/native/osx-arm64/: libgroth16.dylib
data-files/: guardianhash.r1cs  guardianhash.wasm  guardianhash_0001.zkey
examples/: main.go
libgroth16/: Cargo.toml  Makefile  README.md
libgroth16/include/: groth16.h
libgroth16/lib/darwin/arm64/: libark_circom-a6c0b04e23694007.dylib  libgroth16.dylib
libgroth16/src/: api.rs  dto.rs  lib.rs  proof.rs  tests.rs  utils.rs
