[package]
name = "groth16"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
ark-bls12-381 = { version = "0.4.0", features = ["curve"] }
ark-groth16 = "0.4.0"
serde_json = "1.0.108"
log = "0.4.20"
cty = "0.2.2"
ark-serialize = "0.4.1"
ark-ec = "0.4.1"
ark-snark = "0.4.0"
hex = "0.4.3"
anyhow = "1.0.75"
rand = "0.8.5"
ark-circom = { git = "https://github.com/stevenportkey/circom-compat.git", rev = "3b3893326b0296f63ddd70350316d172696f0685" }
ark-bn254 = "0.4.0"
num-bigint = "0.4.3"
ark-std = "0.4.0"
base64 = "0.21.5"
ark-relations = "0.4.0"
serde = "1.0.193"
eyre = "0.6.11"
num-traits = "0.2.15"
itertools = "0.10.5"
ark-ff = "0.4.1"

[dev-dependencies]
base64 = "0.21.5"
